<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/sky_blue_three"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".presentation.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            android:layout_marginHorizontal="42dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:src="@drawable/img_urban_navigator"
                android:layout_marginHorizontal="6dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/deep_blue_two"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/email"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue_two"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:hint=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:hint="@string/masukkan_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_two"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/password"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue_two"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:hint=" "
                android:layout_width="match_parent"
                app:passwordToggleTint="@color/gray_two"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:hint="@string/masukkan_password"
                    android:textColorHint="@color/gray_two"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password"
                android:layout_gravity="end"
                android:textColor="@color/blue_two"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_semibold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="20sp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/deepblue_box_10"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/blue_two"
                    android:text="@string/belum_punya_akun"
                    />

                <TextView
                    android:id="@+id/btnToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/red_app"
                    android:text="@string/register"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>